--- a/src/components/IconButton/icon-button.css
+++ b/src/components/IconButton/icon-button.css
@@ -22,15 +22,6 @@
   width: var(--sgds-dimension-40);
 }
 
-.btn > svg {
-    width: var(--sgds-dimension-24);
-    height: var(--sgds-dimension-24);
-}
-.btn-lg > svg {
-    width: var(--sgds-dimension-32);
-    height: var(--sgds-dimension-32);
-}
-.btn-sm > svg {
-    width: var(--sgds-dimension-20);
-    height: var(--sgds-dimension-20);
+slot::slotted(*) {
+  color: var(--sgds-btn-color);
 }
