docs(validation): storybook

--- a/.storybook/global.css
+++ b/.storybook/global.css
@@ -31,6 +31,11 @@ sgds-faq-grid {
   flex-direction: column;
   gap: var(--sgds-gap-sm);
 }
+.d-flex-row {
+  display: flex;
+  flex-direction: row;
+  gap: var(--sgds-gap-sm);
+}
 
 .docs-story{
   background: var(--sgds-default-bg);
