test(cypress): add skeleton and divider to cypress

--- a/cypress/apps/angular-app/src/app/app.component.html
+++ b/cypress/apps/angular-app/src/app/app.component.html
@@ -20,6 +20,7 @@
 <quantitytoggle-component></quantitytoggle-component>
 <radio-component></radio-component>
 <sidenav-component></sidenav-component>
+<skeleton-component></skeleton-component>
 <spinner-component></spinner-component>
 <stepper-component></stepper-component>
 <tab-component></tab-component>
