refactor(dropdown): bring out toggler as slot

--- a/src/components/Dropdown/dropdown.css
+++ b/src/components/Dropdown/dropdown.css
@@ -1,167 +1,4 @@
-.input-group.has-validation > .dropdown-toggle:nth-last-child(n + 4),
-.input-group.has-validation > :nth-last-child(n + 3):not(.dropdown-toggle):not(.dropdown-menu):not(.form-floating),
-.input-group:not(.has-validation) > .dropdown-toggle:nth-last-child(n + 3),
-.input-group:not(.has-validation) > :not(:last-child):not(.dropdown-toggle):not(.dropdown-menu):not(.form-floating) {
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
-}
 
-.input-group > :not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
-  margin-left: -1px;
-}
-
-.dropdown,
-.dropdown-center {
-  position: relative;
-}
-
-.dropdown-toggle {
-  white-space: nowrap;
-}
-
-.dropdown-toggle:after {
-  border-bottom: 0;
-  border-left: 0.3em solid transparent;
-  border-right: 0.3em solid transparent;
-  border-top: 0.3em solid;
-  content: "";
-  display: inline-block;
-  margin-left: 0.255em;
-  vertical-align: 0.255em;
-}
-
-.dropdown-toggle:empty:after {
-  margin-left: 0;
-}
-.dropdown-divider {
-  --sgds-dropdown-divider-bg: var(--sgds-border-color-translucent);
-  --sgds-dropdown-divider-margin-y: 0.5rem;
-  border-top: 1px solid var(--sgds-dropdown-divider-bg);
-  height: 0;
-  margin: var(--sgds-dropdown-divider-margin-y) 0;
-  opacity: 1;
-  overflow: hidden;
-}
-
-.dropdown-item {
-  --sgds-dropdown-item-active-color: #fff;
-  --sgds-dropdown-item-active-bg: var(--sgds-info);
-  --sgds-dropdown-item-disabled-color: var(--sgds-gray-500);
-  background-color: var(--sgds-default-bg-transparent);
-  padding: var(--sgds-padding-xs) var(--sgds-padding-lg);
-  clear: both;
-  display: block;
-  color: var(--sgds-default-color);
-  text-align: inherit;
-  text-decoration: none;
-  white-space: nowrap;
-}
-
-.dropdown-item:hover {
-  background-color: var(--sgds-default-bg-translucent-subtle);
-}
-
-.dropdown-item:focus,
-.dropdown-item:focus-visible {
-  outline: 0;
-  box-shadow: inset var(--sgds-form-box-shadow-focus);
-  background-color: var(--sgds-default-bg-translucent-subtle);
-}
-
-.dropdown-item.active,
-.dropdown-item:active {
-  background-color: var(--sgds-primary-bg-translucent);
-  color: var(--sgds-primary-color);
-  text-decoration: none;
-}
-
-.dropdown-item.disabled,
-.dropdown-item:disabled {
-  opacity: var(--sgds-opacity-50);
-  pointer-events: none;
-}
-
-.dropdown-item-label {
-  display: flex;
-  align-items: center;
-  gap: var(--sgds-gap-sm);
-  padding: var(--sgds-padding-2-xs) 0;
-}
-
-.active-icon {
-  margin-left: auto;
-}
-
-.dropdown-header {
-  --sgds-dropdown-header-color: #5d5d5d;
-  --sgds-dropdown-header-padding-x: 1rem;
-  --sgds-dropdown-header-padding-y: 0.5rem;
-  color: var(--sgds-dropdown-header-color);
-  display: block;
-  font-size: 0.875rem;
-  margin-bottom: 0;
-  padding: var(--sgds-dropdown-header-padding-y) var(--sgds-dropdown-header-padding-x);
-  white-space: nowrap;
-}
-
-.sgds.dropdown .dropdown-toggle {
-  align-items: center;
-  gap: 0.5rem;
-  justify-content: space-between;
-}
-
-.sgds.dropdown .dropdown-toggle:after {
-  content: none;
-}
-
-.sgds.dropdown-menu li a.dropdown-item {
-  padding: 1rem;
-}
-
-.sgds.dropdown-menu li a.dropdown-item.active,
-.sgds.dropdown-menu li a.dropdown-item:hover {
-  background-color: #0950df;
-  color: #fff;
-}
-
-.btn-group > .btn.dropdown-toggle-split:first-child,
-.btn-group > .btn:not(:last-child):not(.dropdown-toggle) {
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
-}
-
-.dropdown-toggle-split {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.dropdown-toggle-split:after {
-  margin-left: 0;
-}
-
-.btn-group-sm > .btn + .dropdown-toggle-split,
-.btn-sm + .dropdown-toggle-split {
-  padding-left: 0.375rem;
-  padding-right: 0.375rem;
-}
-
-.btn-group-lg > .btn + .dropdown-toggle-split,
-.btn-lg + .dropdown-toggle-split {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
-.btn-group-vertical > .btn:not(:last-child):not(.dropdown-toggle) {
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
-}
-.sgds.navbar .nav-item a.nav-link.dropdown-toggle {
-  gap: 0.75rem;
-}
-
-.sgds.navbar .nav-item a.nav-link.dropdown-toggle.show {
-  border-bottom: 0.125rem solid #9182e8;
-  color: #9182e8;
+.dropdown{
+  display:flex;
 }
